[project]
name = "code_extractor_crew"
version = "0.1.0"
description = "code_extractor_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
code_extractor_crew = "code_extractor_crew.main:run"
run_crew = "code_extractor_crew.main:run"
train = "code_extractor_crew.main:train"
replay = "code_extractor_crew.main:replay"
test = "code_extractor_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
